# MonsterRPG

./: .coverage  .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Monster_Survival_RPG_PRD.md  README.md  pyproject.toml  render.yaml  start.sh  vercel.json
.claude/: plan.md
.github/workflows/: ci.yml
ElementsRPG/.plastic/: plastic.changes  plastic.selector  plastic.wktree  plastic.workspace
ElementsRPG/Assets/: link.xml
ElementsRPG/Assets/Prefabs/: MonsterListItem.prefab
ElementsRPG/Assets/Resources/: PerformanceTestRunInfo.json
ElementsRPG/Assets/Scenes/: Combat.unity  Home.unity  Login.unity  Results.unity
ElementsRPG/Assets/Scripts/API/: ApiClient.cs  AuthManager.cs  CombatApi.cs  EconomyApi.cs  MonsterApi.cs  SaveApi.cs
ElementsRPG/Assets/Scripts/Config/: GameConfig.cs
ElementsRPG/Assets/Scripts/Editor/: ProjectSetup.cs
ElementsRPG/Assets/Scripts/Models/: ApiModels.cs
ElementsRPG/Assets/Scripts/UI/: CombatController.cs  HomeController.cs  LoginController.cs  MonsterListItem.cs  ResultsController.cs  SceneData.cs
ElementsRPG/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
ElementsRPG/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
alembic/: env.py
alembic/versions/: 001_initial_schema.py
scripts/: start.sh
src/elements_rpg/: config.py  conftest.py  main.py  player.py  save_load.py
src/elements_rpg/api/: app.py  auth.py  config.py  dependencies.py  schemas.py
src/elements_rpg/api/routers/: __init__.py  auth.py  combat.py  crafting.py  economy.py  health.py  idle.py  monsters.py  (+6 more)
src/elements_rpg/combat/: damage_calc.py  manager.py
src/elements_rpg/db/: base.py  converters.py  engine.py  session.py
src/elements_rpg/economy/: __init__.py  action_queue.py  areas.py  crafting.py  manager.py  premium.py  reward_ads.py  subscription.py
src/elements_rpg/idle/: offline_gains.py  tracker.py
src/elements_rpg/monsters/: __init__.py  bestiary.py  models.py  skill_catalog.py  skill_catalog_extended.py  taming.py  team.py
src/elements_rpg/services/: __init__.py  combat_service.py  crafting_service.py  economy_service.py  idle_service.py  monster_service.py  player_service.py  premium_service.py  save_service.py  skills_service.py  taming_service.py  team_service.py
src/elements_rpg/skills/: progression.py  strategy_ai.py
src/elements_rpg/tests/: __init__.py  test_main.py  test_save_load.py
src/monster_rpg/: __init__.py  config.py  player.py  save_load.py
src/monster_rpg/combat/: __init__.py  damage_calc.py  manager.py  strategy.py
src/monster_rpg/economy/: action_queue.py  areas.py  crafting.py  life_skills.py  manager.py  premium.py  reward_ads.py  subscription.py
src/monster_rpg/idle/: __init__.py  offline_gains.py  tracker.py
src/monster_rpg/monsters/: bestiary.py  models.py  skill_catalog.py  skill_catalog_extended.py  taming.py  team.py
src/monster_rpg/skills/: __init__.py  progression.py  strategy_ai.py
src/monster_rpg/tests/: test_main.py  test_save_load.py
webgl-build/: index.html
webgl-build/StreamingAssets/: config.json
(+60 files in other folders)
